MacViews: Handling changing of first responder inside NativeWidgetMac.

NativeWidgetMac usually contains more then one NSView.
For example browser window contains ViewsCompositorSuperview and WebContentsView.
So views::FocusManager must handle not only changing of key NSWindow,
but also changing of first responder inside NSWindow, that holds
NativeWidget.

BUG=591016

Review URL: https://codereview.chromium.org/1759913004

Cr-Commit-Position: refs/heads/master@{#379525}

Former-commit-id: c2936ff6d9dfed0b4fea95575a1a3a099b46be5d